# pytest pycodestyle configuration
[tool:pytest]
# Function starting with the following pattern are considered for test cases.
python_functions=test_

# pytest pycodestyle configuration
codestyle_max_line_length = 88
codestyle_ignore = E302 W503 E203 E501 E265 E402 E251 E211

[metadata]
description-file = README.md
license_file = LICENSE.txt

[flake8]
max-line-length = 88
# See these resources for descriptions of the error codes:
# E***, F***, W*** : https://flake8.pycqa.org/en/latest/user/error-codes.html
# D***: http://www.pydocstyle.org/en/stable/error_codes.html
ignore = W503, E121, E126, E211, E225, E501, E203, E402, F401, F811,
    D100,  # ignore missing docstrings in public module
    D104,  # ignore missing docstrings in public package
    D105,   # ignore missing docstrings in magic methods
docstring-convention = google

[mypy]
ignore_missing_imports = True
show_error_codes = True
warn_redundant_casts = True
warn_unused_ignores = True
