# pytest pycodestyle configuration
[tool:pytest]
# Function starting with the following pattern are considered for test cases.
python_functions=test_

# pytest pycodestyle configuration
codestyle_max_line_length = 88
codestyle_ignore = E302 W503 E203 E501 E265 E402 E251 E211

[metadata]
description-file = README.md
license_file = LICENSE.txt

[flake8]
max-line-length = 88
# See these resources for descriptions of the error codes:
# E***, F***, W*** : https://flake8.pycqa.org/en/latest/user/error-codes.html
# D***: http://www.pydocstyle.org/en/stable/error_codes.html
ignore = W503,  # line break before binary operator
    E121,  # continuation line under-indented for hanging indent
    E126,  # continuation line over-indented for hanging indent
    E203,  # whitespace before ‘:’
    E211,  # whitespace before ‘(‘
    E225,  # missing whitespace around operator
    E402,  # module level import not at top of file
    E501,  # line too long (102 > 88 characters)
    F401,  # module imported but unused
    F811,  # redefinition of unused name from line N
    D100,  # ignore missing docstrings in public module
    D104,  # ignore missing docstrings in public package
    D105,  # ignore missing docstrings in magic methods
docstring-convention = google

[mypy]
ignore_missing_imports = True
show_error_codes = True
warn_redundant_casts = True
warn_unused_ignores = True
