# pytest pycodestyle configuration
[tool:pytest]
# Function starting with the following pattern are considered for test cases.
python_functions=test_

[metadata]
description-file = README.md
license_file = LICENSE.txt

[mypy]
ignore_missing_imports = True
show_error_codes = True
warn_redundant_casts = True
warn_unused_ignores = True
